# kgeneric

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  coupler_G0p2_L10_D5_D5_W0p5_LWG_E8a9ff7cf.gds  pyproject.toml
.github/workflows/: pages.yml  test_code.yml
K Generic/: config.py
K Generic/pcells/: gc.py  mzi.py  taper.py
K Generic/pcells/dbu/: taper.py
KGeneric/: Makefile
KGeneric/KGeneric/: __init__.py  generic_tech.py  get_component.py
KGeneric/KGeneric/pcells/: DCs.py  euler.py  grating_coupler_elliptical.py  waveguide.py
KGeneric/KGeneric/pcells/dbu/: taper.py  waveguide.py
KGeneric/docs/: _config.yml  tutorial.md
KGeneric/pcells/: __init__.py  bezier.py
KGeneric/pcells/dbu/: __init__.py
docs/: _config.yml  _toc.yml  api.rst  cells.py  cells.rst  tutorial.md  write_cells.py  write_cells_jupyter.py
gds/gds_ref/: GC_TM.gds  coupler_G0p2_L10_D5_D5_W0p5_LWG_E8a9ff7cf.gds
kgeneric/: __init__.py  config.py  gpdk.py  layers.py  pdk.py  routing.py  tech.py
kgeneric/cells/: DCs.py  __init__.py  bezier.py  circular.py  coupler.py  euler.py  gc.py  grating_coupler_elliptical.py  mzi.py  straight.py  taper.py  waveguide.py
kgeneric/cells/dbu/: __init__.py  straight.py  taper.py  waveguide.py
kgeneric/samples/: bend_chain.py  straight_chain.py
kgeneric/tests/: test_cells.py
kgeneric/tests/gds/gds_ref/: grating_coupler_elliptical_Pte_TL16600_TA40_TEA10_LC1p554_FA15_GLW343_WW500_N2p638_LTWG_LTUNDERCUT_PS26_NP30_TO0_TENPlast_PNone_XFLNone_CI1p443.gds  grating_coupler_elliptical_Pte_TL16p6_TA40_TEA10_LC1p554_FA15_GLW0p343_WW0p5_N2p638_LTWG_LTUNDERCUT_PS26_NP30_TO0_TENPlast_PNone_XFLNone_CI1p443.gds  straight_coupler_G0p2_L10_W0p5_LWG_E8a9ff7cf.gds
tests/: test_cells.py
tests/gds/gds_ref/: GC_TE.gds  bend_circular_W0p5_R10_LWG_EWGSTD_A90_AS1.gds  bend_euler_W0p5_R10_LWG_EWGSTD_A90_R150.gds  bend_s_W0p5_H10_L20_LWG_NP99_TS0_TS1_EWGSTD.gds  bend_s_euler_O0_W0p5_R5_LWG_EWGSTD_R150.gds  grating_coupler_elliptical_Pte_TL16600_TA40_TEA10_LC1p554_FA15_GLW343_WW500_N2p638_LTWG_LTUNDERCUT_PS26_NP30_TO0_TENPlast_PNone_XFLNone.gds  mzi_DL10_LY2_LX0p1_BCbend_euler_Sstraight_SYNone_SXTNone_SXBNone_Scoupler_CNone_WSTrue_PESo3_PESo4_PECo1_W1_L0_R5_ENone.gds  mzi_DL10_LY2_LX0p1_Bbend_euler_Sstraight_SYNone_SXTNone_SXBNone_Scoupler_CNone_WSTrue_PESo3_PESo4_PECo1_W1_L0_R5_ENone.gds  straight_W500_L10000_LWG_EWGSTD.gds  taper_W500_W1000_L10000_LWG_EWGSTD.gds
